--- a/Responsive Web Design/Survey Form/styles.css
+++ b/Responsive Web Design/Survey Form/styles.css
@@ -42,7 +42,7 @@ body {
 }
 
 form {
-    padding: 2rem 1rem 1rem;
+    padding: 1rem;
     margin: 0 auto;
     background-color: rgb(104, 173, 173, 0.5);
     max-width: 500px;
@@ -50,6 +50,7 @@ form {
 }
 
 input[type="text"],
+input[type="email"],
 input[type="number"],
 select,
 option,
@@ -65,6 +66,7 @@ textarea,
     text-indent: 0.5rem;
     font-family: Karla;
     font-size: 16px;
+    margin-top: 10px;
 }
 label{
     font-family: Karla;
@@ -74,10 +76,12 @@ textarea {
     height: 50px;
 }
 
-p {
+p,
+#name-label,
+#email-label,
+#number-label {
     font-size: 24px;
     font-weight: bold;
-    margin-bottom: 5px;
 }
 
 #title {
